--- a/trivia/src/App.css
+++ b/trivia/src/App.css
@@ -1,57 +1,65 @@
 body {
   background-color: black;
-  background-image: url("./background.png");
+  background-image: url('./background.png');
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
 }
-.strikes{
-  color:darkgray;
+.strikes {
+  color: darkgray;
 }
-.have-strike{
+.have-strike {
   color: red;
 }
 .homeHeadline {
   font-family: 'Sansita Swashed', cursive;
-  font-size: 9vh; 
+  font-size: 9vh;
   padding-top: 22vh;
   animation-name: startheadline;
   animation-duration: 1s;
 }
 .generalHeadline {
   font-family: 'Sansita Swashed', cursive;
-  font-size: 9vh; 
+  font-size: 9vh;
   animation-name: headline;
   animation-duration: 1s;
 }
-.home-btn{
+.home-btn {
   background-color: transparent;
   border: none;
   cursor: pointer;
-
 }
 @keyframes startheadline {
-  0% {padding-top: 0vh;}
-  100% {padding-top: 22vh;}
+  0% {
+    padding-top: 0vh;
+  }
+  100% {
+    padding-top: 22vh;
+  }
 }
 @keyframes headline {
-  0% {padding-top: 22vh;}
-  100% {padding-top: 0vh;}
+  0% {
+    padding-top: 22vh;
+  }
+  100% {
+    padding-top: 0vh;
+  }
 }
-.fa-arrow-right{
-padding-right: 1vw;
+.fa-arrow-right {
+  padding-right: 1vw;
 }
 .start-btn {
   cursor: pointer;
   transition: 0.8s;
   font-size: 2.2vh;
   background-color: transparent;
-  border:none;
+  border: none;
   padding-top: 1.5vh;
 }
-.start-btn:hover, .leaderboard-btn:hover{
+.start-btn:hover,
+.leaderboard-btn:hover {
   text-decoration: none;
-  color:darkcyan;
+  color: darkcyan;
   transition: 0.8s;
   letter-spacing: 0.3vw;
 }
@@ -61,11 +69,11 @@ padding-right: 1vw;
   cursor: pointer;
   transition: 0.8s;
   background-color: transparent;
-  border:none;
+  border: none;
   margin-top: 20vh;
 }
 
-input{
+input {
   border: none;
   border-bottom: 2px solid purple;
   text-align: center;
@@ -73,30 +81,32 @@ input{
   background-color: transparent;
   font-size: 2.5vh;
   transition: 1s;
-
 }
 
-input:focus{
+input:focus {
   outline: none;
 }
 
-input:hover{
+input:hover {
   outline: none;
   box-shadow: 5px 5px 5px purple;
   transition: 1s;
 }
 
-.leaderboard-page, .game-page {
+.leaderboard-page,
+.game-page {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 15px;
   background-color: white;
   margin: 0 20vw;
   margin-top: 8vh;
-  opacity: 0.75;  
+  opacity: 0.75;
 }
-
 
 th {
   padding-right: 15vw;
   padding-left: 5vw;
+}
+.timer {
+  font-size: 30px;
 }
