--- a/trivia/src/App.css
+++ b/trivia/src/App.css
@@ -103,20 +103,10 @@ th {
   font-size: 30px;
 }
 .star {
-  animation-name: stars;
-  animation-duration: 1s;
-  position: absolute;
+  position: relative;
   left: 44%;
-  top: 35%;
 }
-@keyframes stars {
-  0% {
-    padding-top: 22vh;
-  }
-  100% {
-    padding-top: 0vh;
-  }
-}
+
 .showUser {
   top: 3%;
   text-align: left;
